<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_height="wrap_content"
    tools:ignore="Overdraw">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:rotation="90"
        android:background="@drawable/bg_notification_icon"
        android:src="@drawable/ic_notification_pill"
        tools:ignore="ContentDescription,UseAppTint" />
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/take_medicine"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/quantum_grey600"
            android:text="@string/take_my_prescribed_medicine"
            android:textSize="14sp"
            style="@style/TextAppearance.Compat.Notification.Title" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_10_00"
        android:textColor="@color/quantum_grey800"
        android:textSize="14sp"
        style="@style/TextAppearance.Compat.Notification.Time" />


</LinearLayout>